--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "deploy": "vercel deploy --prod"
   },
   "devDependencies": {
     "vite": "^4.5.0"
@@ -15,4 +16,5 @@
     "three": "^0.158.0",
     "vite-plugin-glsl": "^1.3.0"
   }
+  
 }
